Fix overflowing display

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -28,6 +28,7 @@ button {
   grid-column-start: 1;
   grid-column-end: 5;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
